# diagram-and-docs

./: .gitignore  README.md  index.html  project-plan.html  project_plan.md  serve.bat  serve.sh  serverpool-spec.html  tech-stacks.html  tech_stacks.md  test-plan.html  use-case-spec.html
assets/: app.js  manifest.js  style.css
diagrams/: README.md  erd.drawio  sequence-reservation.drawio
docs/: ai-ops.md  dynamic-models-nfr-draft.md  erd-feature-api-draft.md  notion-page-design.md  notion-page-impl-plan.md  project_plan.md  tech_stacks.md  test-plan-draft.md  소프트웨어공학_01_4조_유스케이스_명세서.md
docs-web/: index.html  team-4-agile.xlsx
docs-web/assets/: app.js  manifest.js  style.css
docs-web/diagrams/: README.md  architecture.drawio  class-diagram.drawio  erd.drawio  sequence-reservation.drawio  state-diagrams.drawio  use-case-diagram.drawio
docs/03-architecture/: architecture.md  serverpool-spec.md
docs/04-design/: ai-ops.md  dynamic-models.md
docs/05-testing/: test-plan.md
frontend-design/: .gitignore  README.md  frontend-ia.drawio  index.html
frontend-prototype-kkm/: README.md  index.html
report-documentation/: README.md  build_report.py  report_style.py  서버예약할당관리시스템_보고서_초안.docx
test-tool/: 00-testkit-cli.md  README.md
test-tool/docs/: 04-blackbox-pytest.md  README.md
testing/: README.md  pyproject.toml
testing/testkit/: cli.py  report_html.py  results.py  scenarios.py  ui.py  verify.py
testing/testkit/commands/: breakpoint.py  loadtest.py
testing/testkit/engines/k6/: breakpoint.js
testing/testkit/engines/locust/: shapes.py  stages_data.py
(+33 files in other folders)
