[project]
name = "testkit"
version = "0.1.0"
description = "SE Team 4 테스트 CLI: 사전 점검 + 부하/중단점/장애 테스트 + 다듬어진 결과 출력"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "locust>=2.29",
]

[project.scripts]
testkit = "testkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testkit"]
